compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_operation_call_targets.snap
---
source: tests/fixtures.rs
assertion_line: 2196
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_operation_call_targets.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
factory sent
factory monitored
factory linked
stderr:
<empty>
