compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_operation_expression_targets.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_operation_expression_targets.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
sent
linked
stderr:
<empty>
