compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_operation_record_targets.snap
---
source: tests/fixtures.rs
assertion_line: 2677
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_operation_record_targets.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
record target sent
record target monitored
record target linked
stderr:
<empty>
