compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_operation_tuple_unknown_messages.snap
---
source: tests/fixtures.rs
assertion_line: 2677
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_operation_tuple_unknown_messages.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
tuple unknown string
tuple unknown i64
stderr:
<empty>
