compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_apply_result_capture.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/apply_result_capture.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
