compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_forward_i64_payload.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/forward_i64_payload.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
7
stderr:
<empty>
