compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_link_smoke.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/link_smoke.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
linked
stderr:
<empty>
